--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- stylesheets -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-    />
+    <script src="https://kit.fontawesome.com/3322c6a44c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/main.css" />
     <!-- ssh -->
-    <title>Contact Chris Cuomo</title>
+    <title>Chris Cuomo Portfolio</title>
   </head>
 
-  <body>
+  <body id="bg-img">
     <header>
       <div class="menu-btn">
         <div class="btn-line">
@@ -41,7 +38,7 @@
             <a href="../dist/index.html" class="nav-link">
               <img
                 class="nav-img"
-                src="../dist/images/drawings/navIcons/home.png"
+                src="./dist/images/drawings/navIcons/home.png"
               />
             </a>
           </li>
@@ -49,7 +46,7 @@
             <a href="../dist/about.html" class="nav-link">
               <img
                 class="nav-img"
-                src="../dist/images/drawings/navIcons/about.png"
+                src="./dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
@@ -57,7 +54,7 @@
             <a href="../dist/portfolio.html" class="nav-link">
               <img
                 class="nav-img"
-                src="../dist/images/drawings/navIcons/Videos.png"
+                src="./dist/images/drawings/navIcons/Videos.png"
               />
             </a>
           </li>
@@ -65,75 +62,70 @@
             <a href="../dist/contact.html" class="nav-link">
               <img
                 class="nav-img"
-                src="../dist/images/drawings/navIcons/contact.png"
+                src="./dist/images/drawings/navIcons/contact.png"
               />
             </a>
           </li>
           <li class="gtr">
-            <img id="gtr1" src="../dist/images/drawings/electGtrWhite.png" />
+            <img id="gtr1" src="./dist/images/drawings/electGtrWhite.png" />
           </li>
         </ul>
       </nav>
     </header>
-    <main id="contact">
-      <h1 id="Allinq"> All inquiries:</h1>
-     <!--  <h1 class="lg-heading my-name">
-       <img
-          id="reachMeTxt"
-          src="./images/drawings/reachMe.png"
-          alt="reachme"
-        />
-      </h1> -->
-      <img id="lineAboutContact" src="../dist/images/drawings/lineAbout.png" />
+
+    <main id="home">
+      <h1 id="my-name" class="lg-heading">
+        <img id="ChrisCuomo" src="./dist/images/drawings/myNameSmall.png" />
+      </h1>
+      <img id="lineAbout" src="./dist/images/drawings/lineAbout.png" />
       <h2 class="sm-heading">
-        <!-- <div id="h2-head">
-          All inquiries:
-        </div> -->
+        <!-- Musician, Producer, Engineer, Technology Enthusiast  -->
+        <!-- <img id="CCdescription" src="./dist/images/drawings/desc5.png" /> -->
+        <img
+          id="CCdescription"
+          src="./dist/images/drawings/actualDescription.png"
+        />
       </h2>
-      <div class="boxes">
-        <div id="email">
-          <span class="box-inputs">Email:</span>
-          <span id="email-txt">cuomoproductions@proton.me</span>
-        </div>
-        <div>
-          <span class="box-inputs">Phone:</span
-          ><span id="phone-txt">(978) 494-7442</span>
-        </div>
-        <div>
-          <span class="box-inputs">Address:</span>
-          <span id="address-txt">P.O. Box 837 Andover, MA 01810</span>
-        </div>
-      </div>
-      <br />
-     <!--  <div id="contact-page-icons" class="icons">
-        <a
+       <div class="icons">
+        <a href="https://www.youtube.com/@fritzcuomomusiccreation" target="blank">
+        <i class="fa-brands fa-youtube fa-3x"></i>
+        </a>
+        <a href="https://www.instagram.com/cuomo_music_creation/" target="_blank">
+        <i class="fa-brands fa-square-instagram fa-3x"></i>
+      </a>
+        <a href="https://twitter.com/cuomo_music" target="_blank">
+          <i class="fa-brands fa-square-x-twitter fa-3x"></i>
+        </a>
+
+      
+        <!-- <a
           href="https://www.linkedin.com/in/christopher-cuomo-aa7805115/"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img class="homeIcons" src="../dist/images/drawings/LinkIcon.png" />
+          <img class="homeIcons" src="./dist/images/drawings/LinkIcon.png" />
         </a>
         <a
           href="https://github.com/weatherfields"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img class="homeIcons" src="../dist/images/drawings/GitIcon.png" />
-        </a>
-      </div> -->
+          <img class="homeIcons" src="./dist/images/drawings/GitIcon.png" />
+        </a> -->
+      </div> 
     </main>
     <footer>
       <div id="main-footer">
         <span></span>
         <img
           id="footerImg"
-          src="../dist/images/drawings/copyright2024.png"
+          src="./dist/images/drawings/copyright2024.png"
           alt="cc"
         />
         <span></span>
       </div>
       <!-- Copyright &copy; 2020 -->
     </footer>
-    <script src="js/main.js"></script>
+    <script src="dist/js/main.js"></script>
   </body>
 </html>
