--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <header>
       <div class="menu-btn">
         <div class="btn-line">
-          <img src="../dist/images/drawings/navIcons/btnLine1.png" />
+          <img src="./dist/images/drawings/navIcons/btnLine1.png" />
         </div>
         <div class="btn-line">
-          <img src="../dist/images/drawings/navIcons/btnLine2.png" />
+          <img src="./dist/images/drawings/navIcons/btnLine2.png" />
         </div>
         <div class="btn-line">
-          <img src="../dist/images/drawings/navIcons/btnLine3.png" />
+          <img src="./dist/images/drawings/navIcons/btnLine3.png" />
         </div>
         <div class="btn-line">
-          <img src="../dist/images/drawings/navIcons/btnLine4.png" />
+          <img src="./dist/images/drawings/navIcons/btnLine4.png" />
         </div>
       </div>
       <nav class="menu">
         <div class="menu-branding">
           <div id="me-main">
-            <img class="my-image" src="../dist/images/MeMain_3.png" />
+            <img class="my-image" src="./dist/images/MeMain_3.png" />
           </div>
         </div>
         <ul class="menu-nav">
@@ -38,12 +38,12 @@
             <a href="./index.html" class="nav-link">
               <img
                 class="nav-img"
-                src="./images/drawings/navIcons/home.png"
+                src="./dist/images/drawings/navIcons/home.png "
               />
             </a>
           </li>
           <li class="nav-item">
-            <a href="../dist/about.html" class="nav-link">
+            <a href="./dist/about.html" class="nav-link">
               <img
                 class="nav-img"
                 src="./dist/images/drawings/navIcons/about.png"
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="../dist/portfolio.html" class="nav-link">
+            <a href="./dist/portfolio.html" class="nav-link">
               <img
                 class="nav-img"
                 src="./dist/images/drawings/navIcons/Videos.png"
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="../dist/contact.html" class="nav-link">
+            <a href="./dist/contact.html" class="nav-link">
               <img
                 class="nav-img"
                 src="./dist/images/drawings/navIcons/contact.png"
@@ -126,6 +126,6 @@
       </div>
       <!-- Copyright &copy; 2020 -->
     </footer>
-    <script src="dist/js/main.js"></script>
+    <script src="./dist/js/main.js"></script>
   </body>
 </html>
