--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- stylesheets -->
     <script src="https://kit.fontawesome.com/3322c6a44c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./dist/css/main.css" />
     <!-- ssh -->
     <title>Chris Cuomo Portfolio</title>
   </head>
@@ -30,7 +30,7 @@
       <nav class="menu">
         <div class="menu-branding">
           <div id="me-main">
-            <img class="my-image" src="./dist/images/MeMain_3.png" />
+            <img class="my-image" src="../dist/images/MeMain_3.png" />
           </div>
         </div>
         <ul class="menu-nav">
@@ -38,12 +38,12 @@
             <a href="./index.html" class="nav-link">
               <img
                 class="nav-img"
-                src="./dist/images/drawings/navIcons/home.png "
+                src="./dist/images/drawings/navIcons/home.png"
               />
             </a>
           </li>
           <li class="nav-item">
-            <a href="./dist/about.html" class="nav-link">
+            <a href="dist/about.html" class="nav-link">
               <img
                 class="nav-img"
                 src="./dist/images/drawings/navIcons/about.png"
@@ -51,7 +51,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="./dist/portfolio.html" class="nav-link">
+            <a href="dist/portfolio.html" class="nav-link">
               <img
                 class="nav-img"
                 src="./dist/images/drawings/navIcons/Videos.png"
@@ -59,7 +59,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="./dist/contact.html" class="nav-link">
+            <a href="dist/contact.html" class="nav-link">
               <img
                 class="nav-img"
                 src="./dist/images/drawings/navIcons/contact.png"
@@ -126,6 +126,6 @@
       </div>
       <!-- Copyright &copy; 2020 -->
     </footer>
-    <script src="./dist/js/main.js"></script>
+    <script src="dist/js/main.js"></script>
   </body>
 </html>
