--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav class="menu">
         <div class="menu-branding">
           <div id="me-main">
-            <img class="my-image" src="../dist/images/MeMain_3.png" />
+            <img class="my-image" src="./dist/images/MeMain_3.png" />
           </div>
         </div>
         <ul class="menu-nav">
