--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- <img id="CCdescription" src="./dist/images/drawings/desc5.png" /> -->
         <img
           id="CCdescription"
-          src="./dist/images/drawings/actualDescription.png"
+          src="./dist/images/drawings/Homepage Description.png"
         />
       </h2>
        <div class="icons">
