--- a/index.html
+++ b/index.html
@@ -78,14 +78,16 @@
         <img id="ChrisCuomo" src="./dist/images/drawings/myNameSmall.png" />
       </h1>
       <img id="lineAbout" src="./dist/images/drawings/lineAbout.png" />
-      <h2 class="sm-heading">
+      <div id="HomepageDescriptionDiv">
+     <!--  This used to be an h2, not a div -->
         <!-- Musician, Producer, Engineer, Technology Enthusiast  -->
         <!-- <img id="CCdescription" src="./dist/images/drawings/desc5.png" /> -->
         <img
           id="CCdescription"
           src="./dist/images/drawings/Homepage Description.png"
         />
-      </h2>
+      
+    </div>
        <div class="icons">
         <a href="https://www.youtube.com/@fritzcuomomusiccreation" target="blank">
         <i class="fa-brands fa-youtube fa-3x"></i>
