--- a/about.html
+++ b/about.html
@@ -38,18 +38,10 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="../dist/index.html" class="nav-link">
+            <a href="../index.html" class="nav-link">
               <img
                 class="nav-img"
                 src="../dist/images/drawings/navIcons/home.png"
-              />
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="../dist/about.html" class="nav-link">
-              <img
-                class="nav-img"
-                src="../dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
@@ -58,6 +50,14 @@
               <img
                 class="nav-img"
                 src="../dist/images/drawings/navIcons/Videos.png"
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="../dist/about.html" class="nav-link">
+              <img
+                class="nav-img"
+                src="../dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
@@ -105,13 +105,13 @@
         </div>
         <div class="bio">
           <p class="p-bio">
-            After graduating from Berklee College of Music with a dual major degree in Music Business and Music Production & Engineering, Chris Cuomo stayed in Boston for a few years while pursuing a solo music act. During his time in Massachusetts he also worked at the record label Fenway Recordings, taught guitar lessons, and had success in writing music for the NBC movie A Year Without A Santa Claus. He ended up on camera performing one of his songs as well.
+            After graduating from Berklee College of Music with a dual major degree in Music Business and Music Production & Engineering, Chris Cuomo stayed in Boston for a few years while pursuing a solo music act. During his time in Massachusetts he also worked at the record label Fenway Recordings, taught guitar lessons, and had success in writing music for the NBC movie A Year Without A Santa Claus. He ended up on camera performing one of the songs that he wrote for the movie as well.
             <br>
               However the plan was always to move west. So when the opportunity came to live in the Bay Area, he relocated there and stayed with friends until eventually finding something more permanent. In the time spent between San Francisco and Oakland he worked at Coyote Hearing, a recording studio in West Oakland. While there he worked with dozens of bands, performing various engineering and produciton roles.
 
-            <br>While the Bay was an interesting and singular place, Chris always loved the serendipitous, bordering on magical nature of Los Angeles. So after much careful consideration (hitching a ride in the middle of the night with nothing other than a laptop and a backpack of clothes) he moved there. <br>Aside from playing music at many LA hot spots, different fruitful opportunities arose in LA. Highlights include working with Grammy Award winning producer John Hill, highly credited engineer John Morrical, legendary producer Keith Olsen, as well as many others. Chris also found some success as a commercial actor in Los Angeles, landing spots in ads for Target, Subaru, and Xiaomi.
+            <br>While the Bay was an interesting and singular place, Chris always loved the serendipitous, bordering on magical nature of Los Angeles. So after much careful consideration (hitching a ride in the middle of the night with nothing other than a laptop and a backpack of clothes) he made the move. <br>Aside from playing music at many LA hot spots, different types of fruitful opportunities arose in LA. Highlights include working with Grammy Award winning producer John Hill, highly credited engineer John Morrical, legendary producer Keith Olsen, as well as many others. Chris also found some success as a commercial actor in Los Angeles, landing spots in ads for Target, Subaru, and Xiaomi.
             
-            Though the love of LA never went away, the aftermath of covid has changed a lot of things there. So after careful consideration (for real this time) Chris is currently back east in Massachusetts. You can find him sharing tips and techniques, as well as creative deep dives and product reviews on his YouTube channel, making new music as a solo act, and working with many local artists and bands as a producer and engineer. <br> If you'd like to work with Chris, then please feel free to reach out through the contact page on this site.
+            <br>Although his love for LA has not gone away, the aftermath of covid has changed a lot of things there. So after careful consideration (for real this time) Chris is currently back east in Massachusetts. You can find him sharing tips and techniques, as well as creative deep dives and product reviews on his YouTube channel, making new music as a solo act, and working with many local artists and bands as a producer and engineer. <br> If you'd like to work with Chris, then please feel free to reach out through the contact page on this site.
           </p>
         </div>
       </div>
