--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,10 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="../dist/index.html" class="nav-link">
+            <a href="../index.html" class="nav-link">
               <img
                 class="nav-img"
                 src="../dist/images/drawings/navIcons/home.png"
-              />
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="../dist/about.html" class="nav-link">
-              <img
-                class="nav-img"
-                src="../dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
@@ -58,6 +50,14 @@
               <img
                 class="nav-img"
                 src="../dist/images/drawings/navIcons/Videos.png"
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="../dist/about.html" class="nav-link">
+              <img
+                class="nav-img"
+                src="../dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
