--- a/contact.html
+++ b/contact.html
@@ -38,18 +38,10 @@
         </div>
         <ul class="menu-nav">
           <li class="nav-item current">
-            <a href="../dist/index.html" class="nav-link">
+            <a href="../index.html" class="nav-link">
               <img
                 class="nav-img"
                 src="../dist/images/drawings/navIcons/home.png"
-              />
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="../dist/about.html" class="nav-link">
-              <img
-                class="nav-img"
-                src="../dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
@@ -58,6 +50,14 @@
               <img
                 class="nav-img"
                 src="../dist/images/drawings/navIcons/Videos.png"
+              />
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="../dist/about.html" class="nav-link">
+              <img
+                class="nav-img"
+                src="../dist/images/drawings/navIcons/about.png"
               />
             </a>
           </li>
@@ -76,14 +76,14 @@
       </nav>
     </header>
     <main id="contact">
-      <h1 id="Allinq"> All inquiries:</h1>
-     <!--  <h1 class="lg-heading my-name">
+      <!-- <h1 id="Allinq"> All inquiries:</h1> -->
+      <h1 class="lg-heading my-name">
        <img
           id="reachMeTxt"
-          src="./images/drawings/reachMe.png"
+          src="./images/drawings/All Inquiries.png"
           alt="reachme"
         />
-      </h1> -->
+      </h1>
       <img id="lineAboutContact" src="../dist/images/drawings/lineAbout.png" />
       <h2 class="sm-heading">
         <!-- <div id="h2-head">
@@ -93,7 +93,7 @@
       <div class="boxes">
         <div id="email">
           <span class="box-inputs">Email:</span>
-          <span id="email-txt">cuomoproductions@proton.me</span>
+          <span id="email-txt">cuomoproductions<br>@proton.me</span>
         </div>
         <div>
           <span class="box-inputs">Phone:</span
