--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       
     </div>
        <div class="icons">
-        <a href="https://www.youtube.com/@fritzcuomomusiccreation" target="blank">
+        <a href="http://www.youtube.com/@cuomomusiccreation" target="blank">
         <i class="fa-brands fa-youtube fa-3x"></i>
         </a>
         <a href="https://www.instagram.com/cuomo_music_creation/" target="_blank">
