--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/3322c6a44c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./dist/css/main.css" />
     <!-- ssh -->
-    <title>Chris Cuomo Portfolio</title>
+    <title>Cuomo Productions</title>
   </head>
 
   <body id="bg-img">
