--- a/index.html
+++ b/index.html
@@ -90,30 +90,14 @@
     </div>
        <div class="icons">
         <a href="http://www.youtube.com/@cuomomusiccreation" target="blank">
-        <i class="fa-brands fa-youtube fa-3x"></i>
+        <img src="./dist/images/square-youtube.png" alt="">
         </a>
         <a href="https://www.instagram.com/cuomo_music_creation/" target="_blank">
-        <i class="fa-brands fa-square-instagram fa-3x"></i>
+        <img src="./dist/images/square-x-twitter.png" alt="">
       </a>
         <a href="https://twitter.com/cuomo_music" target="_blank">
-          <i class="fa-brands fa-square-x-twitter fa-3x"></i>
+          <img src="./dist/images/instagram.png" alt="">
         </a>
-
-      
-        <!-- <a
-          href="https://www.linkedin.com/in/christopher-cuomo-aa7805115/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img class="homeIcons" src="./dist/images/drawings/LinkIcon.png" />
-        </a>
-        <a
-          href="https://github.com/weatherfields"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img class="homeIcons" src="./dist/images/drawings/GitIcon.png" />
-        </a> -->
       </div> 
     </main>
     <footer>
