--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         <a href="https://www.instagram.com/cuomo_music_creation/" target="_blank">
           <img src="./dist/images/instagram.png" alt="">
       </a>
-        <a href="https://twitter.com/cuomo_music" target="_blank">
+        <!-- <a href="https://twitter.com/cuomo_music" target="_blank">
           
           <img src="./dist/images/square-x-twitter.png" alt="">
-        </a>
+        </a> -->
       </div> 
     </main>
     <footer>
