--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         <a href="http://www.youtube.com/@cuomomusiccreation" target="blank">
         <img src="./dist/images/square-youtube.png" alt="">
         </a>
-        <a href="https://www.instagram.com/cuomo_music_creation/" target="_blank">
+        <!-- <a href="https://www.instagram.com/cuomo_music_creation/" target="_blank">
           <img src="./dist/images/instagram.png" alt="">
-      </a>
+      </a> -->
         <!-- <a href="https://twitter.com/cuomo_music" target="_blank">
           
           <img src="./dist/images/square-x-twitter.png" alt="">
